fix(ci): align local and CI verification — full mvn verify passes
- Fix test compilation: UnifiedSearchServiceTest uses Collections.singletonList
- Fix test compilation: WorkspaceLlmConfigRequest constructors add systemPrompt arg
- Fix CategoryServiceTest: update mocks for countByCategoryId and reassignCategory
- Fix WorkspaceLlmConfigServiceTest: fix swapped apiKey params in tests
- Fix SpotBugs RCN_REDUNDANT_NULLCHECK: simplify resolveWorkspaceName()
- Fix test assertions for refactored deleteCategory/mergeCategories logic